# spark-streaming-delta

./: .gitignore  compact.py  consumer.py  consumer_from_json.py  consumer_to_json.py  docker-compose.yml  producer.py  pyproject.toml  vacuum.py
streaming/: reader.py  spark.py
